--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <section id="img">
+    <div class="titles">
+    
+    </div>
+</section>
+
+</Header>
+
+
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
